--- a/assets/help.ini
+++ b/assets/help.ini
@@ -431,11 +431,12 @@ The following Apple II soft switches can be toggled in the panel:
 
 [Screenshots]
 In addition to your platform OS's screenshot tools and shortcuts, SDD provides its own screenshot capabilities.
-All screenshots from SDD are in BMP format, and can be found inside the /screenshots subdirectory of the application.
+All screenshots from SDD can be found inside the /screenshots subdirectory of the application.
 There are 3 types of screenshots, which are triggered either by a function key or the menu:
   • F6: Capture everything (both windows + menus)
   • Shift + F6 or "Video -> Screenshot (No Post Processing)" menu entry: capture only the raw, non‑post‑processed output (560×384 or 640×200 if borders disabled)
   • "Video -> Screenshot (After Post Processing)" menu entry: capture just the filtered output without UI overlays
+You can switch between BMP and PNG for screenshot format from the menu. PNG is recommended for their smaller size.
 
 [Troubleshooting]
 - Blank output? Verify USB connectivity and card power.  
