Reads PWA files with any SHR as the first frame of the animation.

--- a/assets/help.ini
+++ b/assets/help.ini
@@ -76,31 +76,31 @@ Please see the section "UI Navigation" for how to use the extensive user interfa
 
 [SDD Menu]
 • VSYNC
-	VSYNC is the idea of rendering of frames being "vertical synching" with something. SDD can synchronize with:
+    VSYNC is the idea of rendering of frames being "vertical synching" with something. SDD can synchronize with:
 
-	- The monitor: SDD will draw a frame every time the monitor refreshes. Whatever your screen refresh rate is, SDD will try to adapt to it. The positive is that you never have banding or flickering, but the negative is that if your screen has a very fast refresh rate, then you're wasting a lot of energy rendering frames that are useless. There's no need to render at 240 FPS the Apple II video.
+    - The monitor: SDD will draw a frame every time the monitor refreshes. Whatever your screen refresh rate is, SDD will try to adapt to it. The positive is that you never have banding or flickering, but the negative is that if your screen has a very fast refresh rate, then you're wasting a lot of energy rendering frames that are useless. There's no need to render at 240 FPS the Apple II video.
 
-	- The Appletini: SDD will draw a frame whenever your Apple's video generator finishes one pass. If your Apple is a NTSC machine, then SDD will run at 60 FPS. If it's a PAL machine, then 50 FPS. The positive is that you optimize the use of resources. When the Apple finishes drawing the screen, SDD draws it. The negative is that if you want to use some of the eye candy of postprocessing, then you probably want higher refresh rates.
+    - The Appletini: SDD will draw a frame whenever your Apple's video generator finishes one pass. If your Apple is a NTSC machine, then SDD will run at 60 FPS. If it's a PAL machine, then 50 FPS. The positive is that you optimize the use of resources. When the Apple finishes drawing the screen, SDD draws it. The negative is that if you want to use some of the eye candy of postprocessing, then you probably want higher refresh rates.
 
-	- No VSYNC: You choose what you want. Enjoy. Note though that it isn't recommended to run under no FPS limit on fast machines, as the amount of resources (and energy) used will be considerable and totally wasted. SDD will use as much power as possible to render as fast as possible. This is fine for quick performance tests, but don't waste resources.
+    - No VSYNC: You choose what you want. Enjoy. Note though that it isn't recommended to run under no FPS limit on fast machines, as the amount of resources (and energy) used will be considerable and totally wasted. SDD will use as much power as possible to render as fast as possible. This is fine for quick performance tests, but don't waste resources.
 
 • Background Color
-	You can tweak the color of the background of the window of SDD, i.e. whatever is visible beyond the borders of the Apple II video. Why would you do it? Because you can.
+    You can tweak the color of the background of the window of SDD, i.e. whatever is visible beyond the borders of the Apple II video. Why would you do it? Because you can.
 
 • Appletini
-	This menu item tells you the state of the Appletini communication. If SDD can't find the Appletini, this is where you'll know.
+    This menu item tells you the state of the Appletini communication. If SDD can't find the Appletini, this is where you'll know.
 
 • Reset SDD
-	Probably not something you'll use. It essentially restarts SDD without quitting and restarting.
+    Probably not something you'll use. It essentially restarts SDD without quitting and restarting.
 
 • Samples
-	A set of sample images and videos to showcase the capabilities of SDD.
+    A set of sample images and videos to showcase the capabilities of SDD.
 
 • HUD Log
-	Set the position and time of log messages on screen.
+    Set the position and time of log messages on screen.
 
 • The rest...
-	Self explanatory.
+    Self explanatory.
 
 [Motherboard Menu]
 This menu handles interaction with the Apple II's motherboard hardware.
@@ -192,7 +192,7 @@ Monitor Type:
 NTSC (Color only):
   Enables NTSC signal simulation. When checked, shows:
     • Clean Text — adds a mono filter to text
-	• NTSC Strength (0.05–1.0) — tune the power of the NTSC filter. Standard is 0.5.
+    • NTSC Strength (0.05–1.0) — tune the power of the NTSC filter. Standard is 0.5.
     • NTSC Comb Strength (0.0–1.0) — tune color comb filter (0.8 for Model I, 0.9 for Model II)
     • NTSC Gamma Correction (0.5–4.0) — adjust gamma (2.2 for sRGB, 2.5 for NTSC)
 
@@ -428,6 +428,11 @@ The following Apple II soft switches can be toggled in the panel:
 - **Record Events**: open the “Recording” menu and choose “Start Recording”  
 - **Stop Recording**: select “Stop Recording”  
 - **Playback**: use “Load Recording” to replay a captured session  
+[    Load Recording]
+SDD provides the ability to load not only its own recordings (.vcr extension),
+but also extended PaintWorks Animation files, commonly known as PWA or #C20000 files.
+SDD extends the PWA format to allow any kind of SHR image as the first frame, and can
+therefore visualize even the largest interlaced SHR3200 animations.
 
 [Screenshots]
 In addition to your platform OS's screenshot tools and shortcuts, SDD provides its own screenshot capabilities.
@@ -435,7 +440,7 @@ All screenshots from SDD can be found inside the /screenshots subdirectory of th
 There are 3 types of screenshots, which are triggered either by a function key or the menu:
   • F6: Capture everything (both windows + menus)
   • Shift + F6 or "Video -> Screenshot (No Post Processing)" menu entry: capture only the raw, non‑post‑processed output (560×384 or 640×200 if borders disabled)
-  • "Video -> Screenshot (After Post Processing)" menu entry: capture just the filtered output without UI overlays
+  • "Video -> Screenshot (After Post Processing)" menu entry: capture the main window without any of the UI
 You can switch between BMP and PNG for screenshot format from the menu. PNG is recommended for their smaller size.
 
 [Troubleshooting]
