--- a/assets/help.ini
+++ b/assets/help.ini
@@ -382,26 +382,32 @@ Corners Cut / Smooth
   Cut or round the corners of the CRT barrel shape.
 
 [    Color Settings]
+Use OKlab instead of linear RGB
+    OKlab uses more resources but is better for adjusting color parameters.
+
+Brightness
+  Adjust brightness.
+
+Contrast
+  Adjust contrast.
+
+Black Level
+  Adjust video black point.
+
+Saturation
+  Color saturation multiplier.
+
+Hue (in OKLab color scale)
+    Tweak hue around center.
+
+Green<->Red Hue, Blue<->Red Hue, Blue<->Green Hue (in linear RGB)
+  Tweak individual color channel hue shifts.
+
 Scan/Mask Brightness Dependence
   How much mask intensity affects brightness.
 
 Color Space
   Choose color gamut: sRGB, PAL, NTSC‑U, NTSC‑J.
-
-Saturation
-  Color saturation multiplier.
-
-Brightness
-  Global brightness offset.
-
-Black Level
-  Adjust video black point.
-
-Green<->Red Hue, Blue<->Red Hue, Blue<->Green Hue
-  Tweak individual color channel hue shifts.
-
-External Gamma In
-  Should be checked if input is already in linear space. Keep it unchecked generally.
 
 [    Convergence Settings]
 Convergence Overall Strength  
