Major rewrite to allow for DHGR160 and other modes to be cycle accurate. TODO: Video7 mode change check, EVE mode change check

--- a/assets/help.ini
+++ b/assets/help.ini
@@ -244,7 +244,7 @@ OVERRIDE
 Override SHR4 Mode:  
   Force a specific SHR4 mode: None, Force SHR, Force RGGB, Force PAL256, Force R4G4B4, Force 3200.  
 
-Force Double SHR: (Similar to legacy paging)
+SHR Paging: (Similar to legacy paging)
   Choose double SHR paging behavior: Default, Disable, Interlace, Page Flip.
 
 
